
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int val ;
struct addrinfo {int ai_addrlen; int ai_addr; scalar_t__ ai_protocol; int ai_socktype; int ai_family; struct addrinfo* ai_next; scalar_t__ ai_flags; } ;


 int PF_INET ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SO_REUSEADDR ;
 int close (int) ;
 scalar_t__ connect (int,int ,int ) ;
 int freeaddrinfo (struct addrinfo*) ;
 int gai_errno ;
 int getaddrinfo (char const*,char const*,struct addrinfo*,struct addrinfo**) ;
 int setsockopt (int,int ,int ,int const*,int) ;
 int socket (int ,int ,scalar_t__) ;

int
socket_connect (const char *hostname, const char *servname)
{
 struct addrinfo hints, *res;

 hints.ai_family = PF_INET;
 hints.ai_socktype = SOCK_STREAM;
 hints.ai_protocol = 0;
 hints.ai_flags = 0;

 if ((gai_errno = getaddrinfo (hostname, servname, &hints, &res)) == 0)
 {
  struct addrinfo *ptr;

  for (ptr = res; ptr != ((void*)0); ptr = ptr->ai_next)
  {
   int sock;

   sock = socket (ptr->ai_family, ptr->ai_socktype,
     ptr->ai_protocol);
   if (sock != -1)
   {
    const int val = 1;

    setsockopt (sock, SOL_SOCKET, SO_REUSEADDR,
      &val, sizeof (val));
    if (connect (sock, ptr->ai_addr,
      ptr->ai_addrlen))
     close (sock);
    else
    {

     freeaddrinfo (res);
     return sock;
    }
   }
  }
  freeaddrinfo (res);
 }
 return -1;
}
